--- a/indexSearchResult.html
+++ b/indexSearchResult.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <link rel="stylesheet" href="./src/css/styleHtml.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Hacker News</title>
+    <link rel="stylesheet" href="./src/css/styleHtml.scss" />
+    <title>Search Result on Hacker News</title>
   </head>
   <body>
     <div class="input-container">
@@ -21,8 +19,6 @@
     <div id="app" class="container"></div>
     <button id="prevButton">previus</button>
     <button id="nextButton">next</button>
-    <input type="text" name="" id="inputValuePagi" />
-
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
