created Search Component solutions for rendering and styling

--- a/indexSearchResult.html
+++ b/indexSearchResult.html
@@ -15,10 +15,11 @@
       />
       <button id="searchButton">Search</button>
     </div>
-    <div type="text" id="searchResult"></div>
-    <div id="app" class="container"></div>
+    <!--   <div type="text" id="searchResult"></div> -->
+    <div id="searchResultsContainer" class="resultsContainer"></div>
+    <!-- <button id="returnToMain"></button>
     <button id="prevButton">previus</button>
-    <button id="nextButton">next</button>
+    <button id="nextButton">next</button> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
