--- a/index.html
+++ b/index.html
@@ -6,22 +6,53 @@
     <link rel="stylesheet" href="./src/css/styleHtml.scss" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
     <title>Hacker News</title>
   </head>
-  <body>
-    <div class="input-container">
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Enter your search term..."
-      />
-      <button id="searchButton">Search</button>
+  <body class="body">
+    <div class="row g-4 m-5">
+      <h1>Hacker News</h1>
+      <div class="col-auto w-25">
+        <input
+          class="form-control bg-light-subtle"
+          type="text"
+          value=""
+          id="searchInput"
+          placeholder="Enter your search term..."
+        />
+      </div>
+      <div class="col-auto">
+        <button
+          class="btn bg-light-subtle btn-outline-success mb-3 text-dark"
+          id="searchButton"
+        >
+          Search
+        </button>
+      </div>
+      <div class="col-auto ms-3">
+        <ul class="pagination page-item">
+          <button id="prevButton" class="page-link text-light bg-black">
+            &laquo;
+          </button>
+          <input
+            type="text"
+            id="inputValuePagi"
+            class="page-link bg-light-subtle"
+          />
+          <button id="nextButton" class="page-link text-light bg-black">
+            &raquo;
+          </button>
+        </ul>
+      </div>
     </div>
-    <div type="text" id="searchResult"></div>
+    <div type="text" id="searchResult" class="container"></div>
     <div id="app" class="container"></div>
-    <button id="prevButton">previus</button>
-    <button id="nextButton">next</button>
-    <input type="text" name="" id="inputValuePagi" />
 
     <script type="module" src="/src/main.ts"></script>
   </body>
