--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </button>
           <input
             type="text"
+            value=""
             id="inputValuePagi"
             class="page-link bg-light-subtle"
           />
